# amun

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/amun/: CMakePresets.json  amun.cmake
patches/catch2/: catch2.patch
snippets/: cmake.md
test/: CMakeLists.txt  main.cpp
